--- a/frontend/src/Components/Schedule/SpeakersSection/SpeakersSection.css
+++ b/frontend/src/Components/Schedule/SpeakersSection/SpeakersSection.css
@@ -21,12 +21,14 @@
 
 .photo-l {
     border-radius: 30px;
-    margin: 5vh;
+    margin-top:5vh;
+    margin-left: 5vw;
+    margin-bottom: 5vh;
     text-align: center;
 }
 .photo-l img {
     border-radius: 30px;
-    width: 30vw;
+    width: 20vw;
 
 }
 
@@ -40,7 +42,9 @@
 .speaker-description {
     border: 4px solid #707070;
     border-radius: 30px;
-    margin: 5vh;
+    margin-top:5vh;
+    margin-left: 5vw;
+    margin-bottom: 5vh;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -49,21 +53,22 @@
 }
 
 .description-title {
-    padding: 1vh;
+    padding: 0vh 1vw 0vh 1vw;
     text-align: left;
     font-size: 32px;
 }
 .description-sub-title {
-    padding: 1vh;
+    padding: 0vh 1vw 1vh 1vw;
     text-align: left;
     font-size: 15px;
     font-style: italic;
 }
 .description-content {
-    padding: 1vh;
+    padding: 0vh 1vw 1vh 1vw;
     text-align: left;
     font-size: 20px;
 }
+
 @media (max-width: 1400px) {
     #speakers-section{
         position: relative;
